Fix overflow to auto in table

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -150,7 +150,7 @@ body {
 
     table {
       height: 302px;
-      overflow: scroll;
+      overflow-y: auto;
 
 
       tbody {
